fix: problem with x scroller - add overflow-x: hidden;

--- a/styles/scroller.css
+++ b/styles/scroller.css
@@ -2,6 +2,7 @@
     height: 100vh;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
+    overflow-x: hidden;
 }
 
 .scroller section {
